# diffusion-driven-state-space-models

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_HANDOFF.org  CLAUDE.md  CONTEXT.md  HANDOFF.md  LICENSE  README.md  build_mamba.sh  code-review-followup-investigations.md  create-an-implementation-plan-greedy-eagle.md  ddssm_default_study.db  encoder-options-A-C.org  esm_vs_dsm.org  experiments.org  flake.nix  init-experiment-implementation.org  init-experiment-running.org  init-experiment.org  lorenz.sbatch  lorenz_smoke.sbatch  migrate_study.py  model-v2.org  plot-metrics.py  pyproject.toml  pyrightconfig.json  ruff.toml  train.py  verifications.org
.claude/: cluster.local.env.template  resources.yaml  spec-schema.md
conf/: __init__.py  config.yaml  registry.py
configs/: kdd_diffusion_override_beijing.yaml  kdd_diffusion_override_single.yaml  kdd_gauss_beijing.yaml  kdd_gauss_single.yaml  synthetic_gauss.yaml
data/: kdd-aotizhongxin_aq.pt  kdd-beijing-pm25.pt  kdd.pt
docs/: README.md  api.rst  architecture.md  conf.py  encoder-ablation-findings.md  hydra.md  index.md
experiments/: __init__.py  __main__.py  _bases.py  _cli.py  _datasets.py  _launch.py  _make.py  _models.py  _registry.py  _sbatch.py  _study.py  _sweep.py  bimodal_diffusion.py  bimodal_gauss.py  datasets.py  harmonic_diffusion.py  harmonic_gauss.py  kdd_diffusion.py  kdd_gauss.py  log.org  robot_2d_diffusion.py  robot_2d_gauss.py  synthetic_diffusion.py  synthetic_gauss.py  variance_probe_bimodal_clean.py  variance_probe_bimodal_noisy.py  variance_probe_lgssm.py  (+1 more)
(+473 files in other folders)
