[project]
name = "ddssm"
version = "0.1.0"
description = "Diffusion-Driven State Space Models for probabilistic time-series forecasting"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "gluonts[torch]>=0.16.2",
    "hydra-core>=1.3",
    # Requested fork branch for Optuna 4.2.1 support; migrate to a tag or official release when available.
    "hydra-optuna-sweeper @ git+https://github.com/dahlem/hydra.git@feature/upgrade-optuna-4.2.1#subdirectory=plugins/hydra_optuna_sweeper",
    "hydra-zen>=0.13",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3",
    "optuna>=4.7.0",
    "optuna-dashboard>=0.20.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.24.1",
]

[project.optional-dependencies]
# Weights & Biases integration is opt-in; install with `pip install -e .[wandb]`.
# WandbLogger silently no-ops if the package is missing.
wandb = ["wandb>=0.19"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.basedpyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ddssm"]

[tool.hatch.metadata]
allow-direct-references = true
